manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hardened-nginx
  labels:
    app.kubernetes.io/name: hardened-nginx
    app.kubernetes.io/part-of: hardened-nginx
