manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hardened-nginx
  namespace: hardened-nginx
  labels:
    app.kubernetes.io/name: hardened-nginx
    app.kubernetes.io/instance: hardened-nginx
    app.kubernetes.io/version: "1.27"
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: hardened-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: hardened-nginx
      app.kubernetes.io/instance: hardened-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hardened-nginx
        app.kubernetes.io/instance: hardened-nginx
        app.kubernetes.io/version: "1.27"
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: hardened-nginx
    spec:
      serviceAccountName: hardened-nginx
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        fsGroup: 101
      containers:
        - name: nginx
          # nginxinc/nginx-unprivileged:1.27-alpine, pinned by digest for supply-chain safety
          image: nginxinc/nginx-unprivileged@sha256:65e3e85dbaed8ba248841d9d58a899b6197106c23cb0ff1a132b7bfe0547e4c0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 64Mi
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 2
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: cache
              mountPath: /var/cache/nginx
            - name: run
              mountPath: /var/run
            - name: html
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: tmp
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: run
          emptyDir: {}
        - name: html
          configMap:
            name: hardened-nginx-html
