manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hardened-nginx
  namespace: hardened-nginx
  labels:
    app.kubernetes.io/name: hardened-nginx
    app.kubernetes.io/instance: hardened-nginx
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: hardened-nginx
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hardened-nginx
    app.kubernetes.io/instance: hardened-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
